# p2p-chat

./: Cargo.toml  LICENSE  README.md
src/: crypto.rs  discovery.rs  log.rs  main.rs
src/ui/: chat.rs  mod.rs  prompt.rs  terminal.rs
