[package]
name = "p2p-chat"
version = "0.1.0"
authors = ["Andreas Dzialocha <kontakt@andreasdzialocha.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
blake2-rfc = "0.2.18"
byteorder = "1.3.1"
ed25519-dalek = "0.9.1"
futures = "0.1.27"
getopts = "0.2.19"
hex = "0.3.2"
rand = "0.6.5"
sha2 = "0.8.0"
tokio = "0.1.21"
tokio-core = "0.1.17"
trust-dns = "0.16.1"
trust-dns-proto = { version = "0.7.4", features = ["mdns"] }
