[package]
name = "p2p-chat"
version = "0.1.0"
authors = ["Andreas Dzialocha <kontakt@andreasdzialocha.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
blake2-rfc = "0.2.18"
byteorder = "1.3.2"
chrono = "0.4.7"
ed25519-dalek = "0.9.1"
futures = "0.1.28"
getopts = "0.2.19"
hex = "0.3.2"
rand = "0.6.0"
sha2 = "0.8.0"
termion = "1.5.3"
tokio = "0.1.22"
tokio-core = "0.1.17"
trust-dns = "0.16.1"
trust-dns-proto = { version = "0.7.4", features = ["mdns"] }
